--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,3 @@
-html, body, #__nuxt, #__layout, .app, .sidebar, .dody, .content{
-    height: 100%;
-    overflow: hidden;
+html, body, #__nuxt, #__layout{
+    display: block;
 }
