--- a/assets/scss/colors.scss
+++ b/assets/scss/colors.scss
@@ -4,4 +4,11 @@ $color-3: #384256;
 $color-4: #E83C70;
 $color-5: #485772;
 $color-6: #F18AA9;
+$color-7: #EEF1F8;
 
+$gradient-1:linear-gradient(
+    121.33deg,
+    #fec703 -9.46%,
+    $color-4 43.94%,
+    #3eb5e9 99.61%
+  );
