--- a/assets/scss/size.scss
+++ b/assets/scss/size.scss
@@ -3,11 +3,14 @@ $size-2: 114px;
 $size-3: calc(($size-1 - 134px) / 2);
 $size-4: 27px;
 $size-5: 14px;
-
+$size-6: 322px;
+$size-7: 196px;
+$size-8: calc($size-6 - 8px);
+$size-9: calc($size-7 - 8px);
+$size-10: 20px;
 //
 $radius-1: 23px;
 $radius-2: 0px 8px 8px 0px;
-
+$radius-3: 20px;
+$radius-4: calc($radius-3 - 2px);
 //
-$font-family: 'Fredoka One', arial, sans-serif;
-$font_size-1: 12px;
