--- a/static/fonts/fonts.css
+++ b/static/fonts/fonts.css
@@ -1,6 +1,6 @@
 @font-face {  
     font-family: 'Fredoka One';  
-    font-weight: 100;  
+    font-weight: normal;  
     font-style: normal;  
     font-display: swap;  
     src:  
