--- a/assets/scss/link.scss
+++ b/assets/scss/link.scss
@@ -1,18 +1,33 @@
-a.nuxt-link-exact-active, link:hover{
-    background: $color-4;
+a.nuxt-link-exact-active{
+  background: $color-4;
+  div {
+    rect {
+      stroke: $color-2;
+    }
+    path {
+      stroke: $color-2;
+      fill: $color-2;
+    }
     div {
-      rect {
-        stroke: $color-2;
-      }
-      path {
-        stroke: $color-2;
-        fill: $color-2;
-      }
-      div {
-        color: $color-2;
-      }
+      color: $color-2;
     }
   }
-  .link:active {
-    background: $color-6;
+}
+.link:hover{
+  background: $color-4;
+  div {
+    rect {
+      stroke: $color-2;
+    }
+    path {
+      stroke: $color-2;
+      fill: $color-2;
+    }
+    div {
+      color: $color-2;
+    }
   }
+}
+.link:active {
+  background: $color-6;
+}
