--- a/assets/scss/colors.scss
+++ b/assets/scss/colors.scss
@@ -5,6 +5,11 @@ $color-4: #E83C70;
 $color-5: #485772;
 $color-6: #F18AA9;
 $color-7: #EEF1F8;
+$color-8: #FDFDFD;
+$color-9: #1a1a1c;
+$color-10: #A3ABB8;
+
+
 
 $gradient-1:linear-gradient(
     121.33deg,
