--- a/assets/scss/size.scss
+++ b/assets/scss/size.scss
@@ -8,9 +8,17 @@ $size-7: 196px;
 $size-8: calc($size-6 - 8px);
 $size-9: calc($size-7 - 8px);
 $size-10: 20px;
+$size-11: 268px;
+$size-12: 33px;
+
+
+
 //
 $radius-1: 23px;
 $radius-2: 0px 8px 8px 0px;
 $radius-3: 20px;
 $radius-4: calc($radius-3 - 2px);
+$radius-5: 34px;
+$radius-6: 6px;
+
 //
