--- a/assets/scss/font.scss
+++ b/assets/scss/font.scss
@@ -1,2 +1,5 @@
 $font-fredoka: 'Fredoka One', arial, sans-serif;
-$font_size-1: 12px;
+$font_size-1: 12px;$font_size-1: 12px;
+$font_size-2: 24px;$font_size-1: 12px;
+$font_size-3: 10px;$font_size-1: 12px;
+
