--- a/assets/scss/hover_active.scss
+++ b/assets/scss/hover_active.scss
@@ -31,20 +31,32 @@ a.nuxt-link-exact-active{
 .link:active {
   background: $color-6;
 }
+.link1{
+  text-decoration: underline;
+  color: $color-4;
+  background: $color-2;
+
+}
 .link1:active{
   color: $color-10;
 }
 .link1:hover{
   color: $color-5;
   cursor: pointer;
-
 }
 
 .style_input:active{
 
-  //border: 1px solid $color-5;
+  border: 1px solid $color-5;
 }
 .style_input:hover{
     border: 1px solid $color-5;
+
+}
+.form-button:hover{
+  background: $color-6;
+}
+.form-button:active{
+  background: $color-6;
 
 }
