--- a/assets/scss/font.scss
+++ b/assets/scss/font.scss
@@ -1,4 +1,4 @@
-$font-fredoka: 'Fredoka One', arial, sans-serif;
+$font-fredoka: 'Fredoka', arial, sans-serif;
 $font_size-1: 16px;
 $font_size-2: 24px;
 $font_size-3: 16px;
