modal, main, header

--- a/assets/scss/colors.scss
+++ b/assets/scss/colors.scss
@@ -17,13 +17,11 @@ $yellow_op: #fec803e6;
 
 $blue1: #3eb5e9;
 $blue_op: #3eb5e9e6;
-
+$modal_mask: #00000050;
 
 $gradient-1: linear-gradient(135deg,
         $yellow1 0%,
         $pink1 50%,
         $blue1 100%);
-$gradient-1_op: linear-gradient(135deg,
-        $yellow_op 0%,
-        $pink_op 50%,
-        $blue_op 100%);
+
+ $opasity_hov: 0.8;       
