--- a/assets/scss/size.scss
+++ b/assets/scss/size.scss
@@ -9,6 +9,7 @@ $size-9: calc($size-7 - 8px);
 $size-10: 20px;
 $size-11: 268px;
 $size-12: 33px;
+$stripe_height: 28px;
 
 
 
@@ -16,8 +17,7 @@ $size-12: 33px;
 $radius-1: 23px;
 $radius-2: 0px 8px 8px 0px;
 $radius-3: 20px;
-$radius-4: calc($radius-3 - 2px);
+$radius-4: calc($radius-3 - 4px);
 $radius-5: 34px;
 $radius-6: 6px;
-
-//
+$radius_modal: 10px;
