--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -1,13 +1,11 @@
 *::-webkit-scrollbar {
     width: 4px;
   }
-  
-//   *::-webkit-scrollbar-track {
-//     background: orange;
-//   }
-  
+  // *::-webkit-scrollbar-track {
+  //   background: orange;
+  // }
   *::-webkit-scrollbar-thumb {
-    background-color: $grey1;
+    background-color: $pink1;
     border-radius: 2px;
     //border: 3px solid orange;
   }
