--- a/assets/scss/size.scss
+++ b/assets/scss/size.scss
@@ -24,3 +24,7 @@ $radius-4: calc($radius-3 - 4px);
 $radius-5: 34px;
 $radius-6: 6px;
 $radius_modal: 10px;
+
+
+$font_size-1: 16px;
+$font_size-2: 24px;
