tile, block - style;

--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -19,9 +19,9 @@
    button::selection {
      background: transparent;
    }
-   span::selection {
-     background: transparent;
-   }
+  //  span::selection {
+  //    background: transparent;
+  //  }
    svg::selection {
      background: transparent;
    }
