start page, position blocks

--- a/assets/scss/mixin/buttton_stile.scss
+++ b/assets/scss/mixin/buttton_stile.scss
@@ -1,7 +1,7 @@
 @mixin link {
   text-decoration: underline;
   color: $pink1;
-  background: $white;
+  background: transparent;
 
   &:active {
     color: $grey2;
